--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "deep-freeze-strict": "^1.1.1",
-    "expect": "^1.14.0",
+    "expect": "^1.20.2",
     "foundation-sites": "6.2.0",
     "jquery": "^2.2.1",
     "karma": "^0.13.22",
@@ -41,6 +41,7 @@
     "node-uuid": "^1.4.7",
     "react-redux": "^4.4.1",
     "redux": "^3.3.1",
+    "redux-mock-store": "^1.0.3",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
